--- a/src/app/equation/equation.component.html
+++ b/src/app/equation/equation.component.html
@@ -1,3 +1,10 @@
-<p>
-  equation works!
-</p>
+<form [formGroup]="mathForm">
+  {{ a }} + {{ b }} =
+  <input formControlName="answer" />
+</form>
+
+<!-- DEBUG -->
+
+<div>Form is valid: {{mathForm.valid}} </div>
+<div>Form values: {{mathForm.value | json}} </div>
+<div>Form errors: {{mathForm.errors | json}} </div>
